--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,25 +44,25 @@ services:
       context: ./client/next-web/
       dockerfile: Dockerfile.dev
       args:
-        NEXT_PUBLIC_FIREBASE_API_KEY: AIzaSyAVqhwbdB8I56HAMVVlgJKZcfrBkKI2AhQ
-        NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: assistly-kubernetes.firebaseapp.com
-        NEXT_PUBLIC_FIREBASE_PROJECT_ID: assistly-kubernetes
-        NEXT_PUBLIC_FIREBASE_APP_ID: 1:806733379891:web:48bf124c0d9b90298e6646
+        NEXT_PUBLIC_FIREBASE_API_KEY: AIzaSyD341ARauNJgfFVUEeBbBkcdmbALCRRHbE
+        NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: chatbot-cca07.firebaseapp.com
+        NEXT_PUBLIC_FIREBASE_PROJECT_ID: chatbot-cca07
+        NEXT_PUBLIC_FIREBASE_APP_ID: 1:810305965770:web:a96f07a585c59bb99bee33
         REACT_APP_BUILD_NUMBER: 0.0.1
         NEXT_PUBLIC_API_HOST: http://localhost:8000
         API_HOST: http://backend:8000
     ports:
-      - "3000:3000"
+      - "3001:3000"
     depends_on:
       backend:
         condition: service_healthy
       db:
         condition: service_healthy
     environment:
-      - NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAVqhwbdB8I56HAMVVlgJKZcfrBkKI2AhQ
-      - NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=assistly-kubernetes.firebaseapp.com
-      - NEXT_PUBLIC_FIREBASE_PROJECT_ID=assistly-kubernetes
-      - NEXT_PUBLIC_FIREBASE_APP_ID=1:806733379891:web:48bf124c0d9b90298e6646
+      - NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyD341ARauNJgfFVUEeBbBkcdmbALCRRHbE
+      - NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=chatbot-cca07.firebaseapp.com
+      - NEXT_PUBLIC_FIREBASE_PROJECT_ID=chatbot-cca07
+      - NEXT_PUBLIC_FIREBASE_APP_ID=1:810305965770:web:a96f07a585c59bb99bee33
       - REACT_APP_BUILD_NUMBER=0.0.1
       - NEXT_PUBLIC_API_HOST=http://localhost:8000
       - API_HOST=http://backend:8000
